--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,10 +5,10 @@ body {
 .calendar {
   display: flex;
   gap: 1px;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-flow: wrap;
   align-content: flex-start;
   width: 707px;
+  margin: auto;
   padding: 10px;
 }
 
@@ -21,7 +21,7 @@ body {
 
   &:hover {
     cursor: pointer;
-    background-color: #FFBFCB;
+    background-color: #ffbfcb;
     transform: translate(0, -20px);
     transition-duration: 500ms;
   }
@@ -33,15 +33,11 @@ body {
       font-size: 30px;
       content: #{$numberday};
     }
-}
+  }
 
+  // $days-week: mon, tue, wed, thu, fri, sat, sun;
 
+  // @each $day in $days-week {
 
-$days-week: mon, tue, wed, thu, fri, sat, sun;
-
-@each $day in $days-week {
-
-}
-
-
+  // }
 }
