fixed incorrect commit

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -78,6 +78,7 @@ body {
     &.calendar--month-length-#{$days} {
       @for $i from 1 through $days {
         .calendar__day--#{$i} {
+          display: flex;
         }
       }
 
