--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,13 @@
+$start-day: (
+  'mon': 0,
+  'tue': 1,
+  'wed': 2,
+  'thu': 3,
+  'fri': 4,
+  'sat': 5,
+  'sun': 6,
+);
+
 html {
   font-family: Arial, sans-serif;
   font-size: 30px;
@@ -5,35 +15,32 @@ html {
 
 body {
   margin: 0;
-}
-
-.calendar {
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  text-align: center;
+}
 
+.calendar {
+  padding: 0 10px;
+  width: calc(7 * 100px + 6 * 1px);
+  display: flex;
+  flex-wrap: wrap;
   gap: 1px;
-  flex-flow: wrap;
-  width: 707px;
-  margin: auto;
-  padding: 10px;
-
   .calendar__day {
-    background-color: #eee;
-    box-sizing: border-box;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100px;
     width: 100px;
+    height: 100px;
+    box-sizing: border-box;
     border: 1px solid black;
-
+    background-color: #eee;
+    transition-duration: 0.5s;
+    cursor: pointer;
     &:hover {
-      cursor: pointer;
       background-color: #ffbfcb;
       transform: translate(0, -20px);
-      transition-duration: 500ms;
     }
   }
 
@@ -42,20 +49,16 @@ body {
       content: '#{$numberday}';
     }
   }
+}
 
-  $start-day: (
-    'mon': 0,
-    'tue': 1,
-    'wed': 2,
-    'thu': 3,
-    'fri': 4,
-    'sat': 5,
-    'sun': 6,
-  );
+@each $day, $i in $start-day {
+  .calendar--start-day-#{$day} .calendar__day:first-child {
+    margin-left: calc(#{$i} * 100px + #{$i * 1px});
+  }
+}
 
-  @each $day, $i in $start-day {
-    .calendar--start-day-#{$day}:first-child {
-      margin-left: calc(#{$i} * 100px + #{$i * 1px});
-    }
+@for $numberday from 28 through 31 {
+  .calendar--month-length-#{$numberday} :nth-child(n + #{$numberday + 1}) {
+    display: none;
   }
 }
