--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,61 @@
-body {
-  margin: 0;
+@import 'variable';
+
+.calendar {
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+
+  &__field {
+    width: $width-cell;
+    flex-wrap: wrap;
+    display: flex;
+    gap: $gap;
+    padding: 10px;
+
+    @each $start-day, $count in $start-days {
+      &--start-#{$start-day} {
+        .calendar__cell:nth-child(1) {
+          margin-left: calc(#{$count * ($cell-size + $gap)});
+        }
+      }
+    }
+
+    @for $days from 28 through 31 {
+      &--month-length-#{$days} {
+        .calendar__cell:nth-child(n + #{$days + 1}) {
+          display: none;
+        }
+      }
+    }
+  }
+
+  &__cell {
+    border: #{$border} solid black;
+    height: $cell-size;
+    width: $cell-size;
+    box-sizing: border-box;
+    background-color: #eee;
+    position: relative;
+    cursor: pointer;
+    transition:
+      background-color 0.5s,
+      transform 0.5s;
+
+    @for $day from 1 through $day-count {
+      &:nth-child(#{$day})::before {
+        content: '#{$day}';
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 30px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+    }
+    &:hover {
+      background: #ffbfcb;
+      transform: translateY(-20px);
+    }
+  }
 }
