add task solution

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,6 +5,7 @@ body {
   align-items: center;
   justify-content: center;
   display: flex;
+  margin: 0;
 
   .calendar {
     width: $width-cell;
@@ -12,6 +13,7 @@ body {
     display: flex;
     gap: $gap;
     padding: 10px;
+    
 
     @each $start-day, $count in $start-days {
       &--start-day-#{$start-day} {
