--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -11,4 +11,4 @@ $start-days: (
   'fri': 4,
   'sat': 5,
 );
-$width-cell: (7 * $cell-size + 6 * $gap + 2 * $border);
+$width-cell: (7 * $cell-size + 6 * $gap);
