--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -33,25 +33,23 @@ body {
 
   .calendar__day {
     border: #{$border} solid black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     height: $cell-size;
     width: $cell-size;
     box-sizing: border-box;
     background-color: #eee;
-    position: relative;
     cursor: pointer;
     transition:
       background-color 0.5s,
       transform 0.5s;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
 
     @for $day from 1 through $day-count {
       &:nth-child(#{$day})::before {
         content: '#{$day}';
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: 30px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
       }
     }
     &:hover {
