add task solution

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,5 +6,15 @@ $number-font-size: 30px;
 $font-family: Arial, sans-serif;
 $gap-size: 1px;
 $padding-size: 10px;
-$full-day-size: $day-size + $border-width * 2;
+$full-day-size: $day-size + ($border-width * 2);
 $calendar-width: ($full-day-size * 7) + ($gap-size * 6) + ($padding-size * 2);
+$days-of-week: (
+  'mon': 0,
+  'tue': 1,
+  'wed': 2,
+  'thu': 3,
+  'fri': 4,
+  'sat': 5,
+  'sun': 6,
+);
+
