--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,17 @@
 @import 'variables';
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
+
 
 .calendar {
   display: flex;
@@ -12,7 +21,7 @@ body {
   padding: $padding-size;
   box-sizing: border-box;
 
-  .day {
+  .calendar__day {
     width: $day-size;
     height: $day-size;
     background-color: $day-bg;
@@ -21,8 +30,9 @@ body {
     align-items: center;
     justify-content: center;
     position: relative;
-
-    transition-duration: 0.5s;
+    transition:
+      background-color 0.5s,
+      transform 0.5s;
 
     &::before {
       content: '';
@@ -39,7 +49,7 @@ body {
   }
 
   @for $i from 1 through 31 {
-    .day:nth-child(#{$i})::before {
+    .calendar__day:nth-child(#{$i})::before {
       content: '#{$i}';
     }
   }
@@ -51,14 +61,12 @@ body {
       }
     }
   }
+}
 
-  $days-of-week: mon, tue, wed, thu, fri, sat, sun;
-
-  @each $day, $name in $days-of-week {
-    &.calendar--start-day_#{$day} {
-      .calendar_day:first-child {
-        margin-left: calc((#{$full-day-size} + #{$gap-size}) * (#{$name - 1}));
-      }
+@each $day, $number in $days-of-week {
+  .calendar--start-day-#{$day} {
+    .calendar__day:first-child {
+      margin-left: ($full-day-size + 1) * $number;
     }
   }
 }
