--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,7 +7,7 @@ $font-family: Arial, sans-serif;
 $gap-size: 1px;
 $padding-size: 10px;
 $full-day-size: $day-size + ($border-width * 2);
-$calendar-width: ($full-day-size * 7) + ($gap-size * 6) + ($padding-size * 2);
+$calendar-width: ($day-size * 7) + ($gap-size * 6);
 $days-of-week: (
   'mon': 0,
   'tue': 1,
@@ -17,4 +17,3 @@ $days-of-week: (
   'sat': 5,
   'sun': 6,
 );
-
