--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -25,9 +25,8 @@ body {
     align-items: center;
     justify-content: center;
     position: relative;
-    transition:
-      background-color 0.5s,
-      transform 0.5s;
+    transition: background-color 0.5s;
+    transition-duration: 0.5s;
 
     &::before {
       content: '';
