--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -26,8 +26,7 @@ body {
     justify-content: center;
     position: relative;
     transition: background-color 0.5s;
-    transform: 0.5s;
-    transition-duration: 0.5s;
+    transition: all 0.5s;
 
     &::before {
       content: '';
