--- a/src/styles/block/main.scss
+++ b/src/styles/block/main.scss
@@ -5,7 +5,8 @@
   --day-size: 100px;
   --total-gap-width: calc((var(--columns) - 1) * var(--gap));
   --calendar-width: calc(
-    var(--columns) * var(--day-size) + var(--total-gap-width) + 2 * var(--padding)
+    var(--columns) * var(--day-size) + var(--total-gap-width) + 2 *
+      var(--padding)
   );
 }
 
@@ -60,8 +61,8 @@ body {
   display: flex;
 }
 
-@for $i from 28 through 30 {
-  .calendar--month-length-#{$i} .calendar__day:nth-child(n + #{$i + 1}) {
+@for $i from 28 through 31 {
+  .calendar--month-length-#{$i} :nth-child(n + #{$i + 1}) {
     display: none;
   }
 }
