--- a/src/styles/block/main.scss
+++ b/src/styles/block/main.scss
@@ -5,8 +5,7 @@
   --day-size: 100px;
   --total-gap-width: calc((var(--columns) - 1) * var(--gap));
   --calendar-width: calc(
-    var(--columns) * var(--day-size) + var(--total-gap-width) + 2 *
-      var(--padding)
+    var(--columns) * var(--day-size) + var(--total-gap-width) + 2 * var(--padding)
   );
 }
 
