--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -11,6 +11,4 @@ $days-start-column: (
   'sat': 5,
   'sun': 6,
 );
-$calendar-width: calc(
-  #{$day-size} * #{$columns} + #{$gap} * (#{$columns} - 1) + #{$padding} * 2
-);
+$calendar-width: calc(#{$day-size} * #{$columns} + #{$gap} * (#{$columns} - 1));
