add calendar final

--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -26,7 +26,9 @@ body {
     box-sizing: border-box;
 
     &:hover {
-      background-color: pink;
+      cursor: pointer;
+      background-color: #ffbfcb;
+      transition-duration: 0.5s;
       transform: translateY(-20px);
     }
 
@@ -50,7 +52,7 @@ body {
 }
 
 @each $name, $offset in $days-start-column {
-  .calendar--start-day--#{$name} .calendar__day:first-child {
+  .calendar--start-day-#{$name} .calendar__day:first-child {
     margin-left: calc(#{$offset * ($day-size + $gap)});
   }
 }
