--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,73 @@
+$block: 100px;
+$font: Arial, sans-serif;
+$gap: 1px;
+$block-width: $block * 7 + 6 * 1px;
+$month-length: (28, 29, 30, 31);
+$start-day: (
+  'mon': 0,
+  'tue': 1,
+  'wed': 2,
+  'thu': 3,
+  'fri': 4,
+  'sut': 5,
+  'sun': 6,
+);
+
 body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 0;
+  height: 100vh;
+}
+
+.calendar {
+  padding: 0 10px;
+  display: flex;
+  flex-wrap: wrap;
+  width: $block-width;
+  height: auto;
+  align-self: center;
+  gap: 1px;
+
+  &__day {
+    box-sizing: border-box;
+    display: flex;
+    width: $block;
+    height: $block;
+    border: 1px solid black;
+    background-color: #eee;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+
+    &:hover {
+      background-color: #ffbfcb;
+      transform: translateY(-20px);
+      transition: 0.5s;
+    }
+
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i})::before {
+        content: '#{$i}';
+        font-family: $font;
+        font-size: 30px;
+        color: black;
+      }
+    }
+  }
+
+  &--start-day {
+    @each $day, $i in $start-day {
+      &-#{$day} :first-child {
+        margin-left: ($block + $gap) * $i;
+      }
+    }
+  }
+
+  @for $i from 28 through 31 {
+    &--month-length-#{$i} :nth-child(n + #{$i + 1}) {
+      display: none;
+    }
+  }
 }
