add task solution

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,17 +1,4 @@
-$block: 100px;
-$font: Arial, sans-serif;
-$gap: 1px;
-$block-width: $block * 7 + 6 * 1px;
-$month-length: (28, 29, 30, 31);
-$start-day: (
-  'mon': 0,
-  'tue': 1,
-  'wed': 2,
-  'thu': 3,
-  'fri': 4,
-  'sut': 5,
-  'sun': 6,
-);
+@import 'variables';
 
 body {
   display: flex;
@@ -33,8 +20,8 @@ body {
   &__day {
     box-sizing: border-box;
     display: flex;
-    width: $block;
-    height: $block;
+    width: $day-size;
+    height: $day-size;
     border: 1px solid black;
     background-color: #eee;
     justify-content: center;
@@ -60,7 +47,7 @@ body {
   &--start-day {
     @each $day, $i in $start-day {
       &-#{$day} :first-child {
-        margin-left: ($block + $gap) * $i;
+        margin-left: ($day-size + $gap) * $i;
       }
     }
   }
