--- a/src/styles/block/main.scss
+++ b/src/styles/block/main.scss
@@ -1,24 +1,4 @@
-:root {
-  --gap: 1px;
-  --padding: 10px;
-  --columns: 7;
-  --day-size: 100px;
-  --total-gap-width: calc((var(--columns) - 1) * var(--gap));
-  --calendar-width: calc(
-    var(--columns) * var(--day-size) + var(--total-gap-width) + 2 * var(--padding)
-  );
-}
-
-
-$days-of-week: (
-  mon: 0,
-  tue: 1,
-  wed: 2,
-  thu: 3,
-  fri: 4,
-  sat: 5,
-  sun: 6,
-);
+@import '../utils/variables';
 
 * {
   box-sizing: border-box;
