upload tarefa calendar

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,246 @@
+* {
+  box-sizing: border-box;
+}
+
+:root {
+  --square-background: #eee;
+  --square-width: 100px;
+  --square-height: 100px;
+  --square-border: 1px solid black;
+  --square-font: Arial, Helvetica, sans-serif;
+  --square-size: 30px;
+  --square-margin-right: 1px;
+}
+
 body {
   margin: 0;
+  padding: 0;
+}
+
+ul,
+li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.calendar {
+  margin: 100px;
+  margin-top: 100px;
+}
+
+.calendar__week1,
+.calendar__week2,
+.calendar__week3,
+.calendar__week4,
+.calendar__week5,
+.calendar__week6 {
+  display: flex;
+  text-align: center;
+  line-height: 100px;
+  transition-duration: 0, 5s;
+}
+
+.calendar__day {
+  width: var(--square-width);
+  height: var(--square-height);
+  background: var(--square-background);
+  border: var(--square-border);
+  margin: 1px;
+}
+
+.calendar__week1 .calendar__day--sunday {
+  margin: 0 0 0 613px;
+}
+
+.calendar__week1 .calendar__day--sunday::before {
+  content: '1';
+  font-family: var(--square-font);
+  font-size: var(--square-size);
+}
+
+.calendar__week2 .calendar__day--monday::before {
+  content: '2';
+  font-family: var(--square-font);
+  font-size: var(--square-size);
+}
+
+.calendar__week2 .calendar__day--tuesday::before {
+  content: '3';
+  font-family: var(--square-font);
+  font-size: var(--square-size);
+}
+
+.calendar__week2 .calendar__day--wednesday::before {
+  content: '4';
+  font-family: var(--square-font);
+  font-size: var(--square-size);
+}
+
+.calendar__week2 .calendar__day--thursday::before {
+  content: '5';
+  font-family: var(--square-font);
+  font-size: var(--square-size);
+}
+
+.calendar__week2 .calendar__day--friday::before {
+  content: '6';
+  font-family: var(--square-font);
+  font-size: var(--square-size);
+}
+
+.calendar__week2 .calendar__day--saturday::before {
+  content: '7';
+  font-family: var(--square-font);
+  font-size: var(--square-size);
+}
+
+.calendar__week2 .calendar__day--sunday::before {
+  content: '8';
+  font-family: var(--square-font);
+  font-size: var(--square-size);
+}
+
+.calendar__week3 .calendar__day--monday::before {
+  content: '9';
+  font-family: var(--square-font);
+  font-size: var(--square-size);
+}
+
+.calendar__week3 .calendar__day--tuesday::before {
+  content: '10';
+  font-family: var(--square-font);
+  font-size: var(--square-size);
+}
+
+.calendar__week3 .calendar__day--wednesday::before {
+  content: '11';
+  font-family: var(--square-font);
+  font-size: var(--square-size);
+}
+
+.calendar__week3 .calendar__day--thursday::before {
+  content: '12';
+  font-family: var(--square-font);
+  font-size: var(--square-size);
+}
+
+.calendar__week3 .calendar__day--friday::before {
+  content: '13';
+  font-family: var(--square-font);
+  font-size: var(--square-size);
+}
+
+.calendar__week3 .calendar__day--saturday::before {
+  content: '14';
+  font-family: var(--square-font);
+  font-size: var(--square-size);
+}
+
+.calendar__week3 .calendar__day--sunday::before {
+  content: '15';
+  font-family: var(--square-font);
+  font-size: var(--square-size);
+}
+
+.calendar__week4 .calendar__day--monday::before {
+  content: '16';
+  font-family: var(--square-font);
+  font-size: var(--square-size);
+}
+
+.calendar__week4 .calendar__day--tuesday::before {
+  content: '17';
+  font-family: var(--square-font);
+  font-size: var(--square-size);
+}
+
+.calendar__week4 .calendar__day--wednesday::before {
+  content: '18';
+  font-family: var(--square-font);
+  font-size: var(--square-size);
+}
+
+.calendar__week4 .calendar__day--thursday::before {
+  content: '19';
+  font-family: var(--square-font);
+  font-size: var(--square-size);
+}
+
+.calendar__week4 .calendar__day--friday::before {
+  content: '20';
+  font-family: var(--square-font);
+  font-size: var(--square-size);
+}
+
+.calendar__week4 .calendar__day--saturday::before {
+  content: '21';
+  font-family: var(--square-font);
+  font-size: var(--square-size);
+}
+
+.calendar__week4 .calendar__day--sunday::before {
+  content: '22';
+  font-family: var(--square-font);
+  font-size: var(--square-size);
+}
+
+.calendar__week5 .calendar__day--monday::before {
+  content: '23';
+  font-family: var(--square-font);
+  font-size: var(--square-size);
+}
+
+.calendar__week5 .calendar__day--tuesday::before {
+  content: '24';
+  font-family: var(--square-font);
+  font-size: var(--square-size);
+}
+
+.calendar__week5 .calendar__day--wednesday::before {
+  content: '25';
+  font-family: var(--square-font);
+  font-size: var(--square-size);
+}
+
+.calendar__week5 .calendar__day--thursday::before {
+  content: '26';
+  font-family: var(--square-font);
+  font-size: var(--square-size);
+}
+
+.calendar__week5 .calendar__day--friday::before {
+  content: '27';
+  font-family: var(--square-font);
+  font-size: var(--square-size);
+}
+
+.calendar__week5 .calendar__day--saturday::before {
+  content: '28';
+  font-family: var(--square-font);
+  font-size: var(--square-size);
+}
+
+.calendar__week5 .calendar__day--sunday::before {
+  content: '29';
+  font-family: var(--square-font);
+  font-size: var(--square-size);
+}
+
+.calendar__week6 .calendar__day--monday::before {
+  content: '30';
+  font-family: var(--square-font);
+  font-size: var(--square-size);
+}
+
+.calendar__week6 .calendar__day--tuesday::before {
+  content: '31';
+  font-family: var(--square-font);
+  font-size: var(--square-size);
+}
+
+.calendar__week3 .calendar__day--thursday:hover {
+  cursor: pointer;
+  background: #ffbfcb;
+  transform: translate(0, -20px);
 }
