add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,14 +1,7 @@
 @import './variables';
 
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: $main-width-calendar;
-}
-
 .calendar {
-  margin: auto;
+  margin: 80px auto;
   display: flex;
   width: $main-width-calendar;
 
