--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,11 @@
+@import './utils/variables';
+@import './calendar';
+
 body {
+  height: 100vh;
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
