--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,10 @@
 
 body {
   margin: 0;
+  display: flex;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
 }
 
 @for $day from 28 through 30 {
@@ -13,13 +17,11 @@ body {
 }
 
 .calendar {
-  height: 100vh;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  margin: 0 auto;
   gap: 1px;
-  align-content: center;
+  margin: auto;
   width: 716px;
   padding: 10px;
 
