--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,19 +18,21 @@ body {
   flex-wrap: wrap;
   max-width: ($col-count * $block) + $padding-calc;
 
+  &__day::before {
+    box-sizing: border-box;
+    height: $block;
+    width: $block;
+    border: 1px solid #000;
+    background-color: #eee;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 500ms;
+  }
+
   @for $num-of-day from 1 through 31 {
     &__day:nth-child(#{$num-of-day})::before {
-      box-sizing: border-box;
-      height: $block;
-      width: $block;
       content: '#{$num-of-day}';
-      border: 1px solid #000;
-      background-color: #eee;
-
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      transition: all 500ms;
     }
   }
 
