--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,23 +1,4 @@
 /* stylelint-disable rule-empty-line-before */
-@keyframes example {
-  0% {
-    background-color: #eee;
-  }
-  100% {
-    background-color: #ffbfcb;
-  }
-}
-body {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  margin: 0;
-  font-size: 30px;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
 .calendar {
   width: 706px;
   padding: 10px;
@@ -136,67 +117,64 @@ body {
 .calendar__day:nth-child(31)::before {
   content: '31';
 }
-
 .calendar--start-day-mon .calendar__day:first-child {
   margin-left: 0;
 }
-
 .calendar--start-day-tue .calendar__day:first-child {
   margin-left: 101px;
 }
-
 .calendar--start-day-wed .calendar__day:first-child {
   margin-left: 202px;
 }
-
 .calendar--start-day-thu .calendar__day:first-child {
   margin-left: 303px;
 }
-
 .calendar--start-day-fri .calendar__day:first-child {
   margin-left: 404px;
 }
-
 .calendar--start-day-sat .calendar__day:first-child {
   margin-left: 505px;
 }
-
 .calendar--start-day-sun .calendar__day:first-child {
   margin-left: 606px;
 }
-
-.calendar--month-length-28 .calendar__day:nth-child(29) {
-  display: none;
-}
-.calendar--month-length-28 .calendar__day:nth-child(30) {
-  display: none;
-}
+.calendar--month-length-28 .calendar__day:nth-child(29),
+.calendar--month-length-28 .calendar__day:nth-child(30),
 .calendar--month-length-28 .calendar__day:nth-child(31) {
   display: none;
 }
-.calendar--month-length-28 .calendar__day:nth-child(32) {
-  display: none;
-}
-
-.calendar--month-length-29 .calendar__day:nth-child(30) {
-  display: none;
-}
-.calendar--month-length-29 .calendar__day:nth-child(31) {
-  display: none;
-}
+.calendar--month-length-29 .calendar__day:nth-child(30),
+.calendar--month-length-29 .calendar__day:nth-child(31),
 .calendar--month-length-29 .calendar__day:nth-child(32) {
   display: none;
 }
-
-.calendar--month-length-30 .calendar__day:nth-child(31) {
+.calendar--month-length-30 .calendar__day:nth-child(31),
+.calendar--month-length-30 .calendar__day:nth-child(32),
+.calendar--month-length-30 .calendar__day:nth-child(33) {
   display: none;
 }
-.calendar--month-length-30 .calendar__day:nth-child(32) {
+.calendar--month-length-31 .calendar__day:nth-child(32),
+.calendar--month-length-31 .calendar__day:nth-child(33),
+.calendar--month-length-31 .calendar__day:nth-child(34) {
   display: none;
 }
 
-.calendar--month-length-31 .calendar__day:nth-child(32) {
-  display: none;
+@keyframes example {
+  0% {
+    background-color: #eee;
+  }
+  100% {
+    background-color: #ffbfcb;
+  }
+}
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 /*# sourceMappingURL=style.css.map */
