calendar - final task solution

--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -43,9 +43,7 @@
 
   @for $days from 28 through 31 {
     &--month-length-#{$days} {
-      .calendar__day:nth-child(#{$days + 1}),
-      .calendar__day:nth-child(#{$days + 2}),
-      .calendar__day:nth-child(#{$days + 3}) {
+      .calendar__day:nth-child(n + #{$days + 1}) {
         display: none;
       }
     }
