--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -138,24 +138,16 @@
 .calendar--start-day-sun .calendar__day:first-child {
   margin-left: 606px;
 }
-.calendar--month-length-28 .calendar__day:nth-child(29),
-.calendar--month-length-28 .calendar__day:nth-child(30),
-.calendar--month-length-28 .calendar__day:nth-child(31) {
+.calendar--month-length-28 .calendar__day:nth-child(n + 29) {
   display: none;
 }
-.calendar--month-length-29 .calendar__day:nth-child(30),
-.calendar--month-length-29 .calendar__day:nth-child(31),
-.calendar--month-length-29 .calendar__day:nth-child(32) {
+.calendar--month-length-29 .calendar__day:nth-child(n + 30) {
   display: none;
 }
-.calendar--month-length-30 .calendar__day:nth-child(31),
-.calendar--month-length-30 .calendar__day:nth-child(32),
-.calendar--month-length-30 .calendar__day:nth-child(33) {
+.calendar--month-length-30 .calendar__day:nth-child(n + 31) {
   display: none;
 }
-.calendar--month-length-31 .calendar__day:nth-child(32),
-.calendar--month-length-31 .calendar__day:nth-child(33),
-.calendar--month-length-31 .calendar__day:nth-child(34) {
+.calendar--month-length-31 .calendar__day:nth-child(n + 32) {
   display: none;
 }
 
