--- a/src/styles/blocks/variables.scss
+++ b/src/styles/blocks/variables.scss
@@ -6,10 +6,8 @@ $gap-size: 1px;
 $padding-size: 10px;
 $days-border-size: 1px solid black;
 $days-count: 7;
-$calendar-width: $day-size * $days-count + $days-count * $gap-size - 1 +
-  $padding-size * 2;
-$days:
-  'mon' 0,
+$calendar-width: $day-size * $days-count + $days-count * $gap-size - 1 + $padding-size * 2;
+$days: 'mon' 0,
   'tue' 1,
   'wed' 2,
   'thu' 3,
