--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -1,5 +1,5 @@
 .calendar {
-  margin: 70px auto;
+  margin: 72px auto;
   display: flex;
   flex-wrap: wrap;
   gap: 1px;
@@ -13,13 +13,13 @@
     box-sizing: border-box;
     width: $size;
     height: $size;
-    border: 1px solid #f000;
+    border: 1px solid black;
     background-color: #eee;
     transition:
       background-color 0.5s,
       transform 0.5s;
 
-    @for $i from 1 to 31 {
+    @for $i from 1 through 31 {
       &:nth-child(#{$i})::before {
         content: '#{$i}';
       }
